[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Screens/Credits.gd" type="Script" id=1]
[ext_resource path="res://GFX/Font/RPGSystem.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://SFX/som_de_botao.ogg" type="AudioStream" id=3]
[ext_resource path="res://Scenes/Logo/Logo.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "change_scene"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Credits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.647059, 0.568627, 0.619608, 1 )

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -162.5
margin_top = -240.0
margin_right = 162.5
margin_bottom = 240.0
custom_constants/separation = 30

[node name="Title" type="Label" parent="ColorRect/VBoxContainer2"]
margin_right = 325.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 1 )
text = "CREDITS"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/VBoxContainer2"]
margin_top = 124.0
margin_right = 325.0
margin_bottom = 480.0
custom_constants/separation = 30

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/VBoxContainer2/VBoxContainer"]
margin_right = 325.0
margin_bottom = 128.0

[node name="Art" type="Label" parent="ColorRect/VBoxContainer2/VBoxContainer/VBoxContainer"]
modulate = Color( 1, 0.647059, 0.647059, 1 )
margin_right = 325.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Art Department"
align = 1
valign = 1

[node name="Label" type="Label" parent="ColorRect/VBoxContainer2/VBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 325.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 2 )
text = "Carolina Carvalho"
align = 1
valign = 1

[node name="Label2" type="Label" parent="ColorRect/VBoxContainer2/VBoxContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 325.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 2 )
text = "Pedro Machado"
align = 1
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect/VBoxContainer2/VBoxContainer"]
margin_top = 158.0
margin_right = 325.0
margin_bottom = 242.0

[node name="Sounds" type="Label" parent="ColorRect/VBoxContainer2/VBoxContainer/VBoxContainer2"]
margin_right = 325.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.647059, 0.647059, 1 )
text = "Audio Department"
align = 1
valign = 1

[node name="Label2" type="Label" parent="ColorRect/VBoxContainer2/VBoxContainer/VBoxContainer2"]
margin_top = 44.0
margin_right = 325.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 2 )
text = "Euler Moises"
align = 1
valign = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="ColorRect/VBoxContainer2/VBoxContainer"]
margin_top = 272.0
margin_right = 325.0
margin_bottom = 356.0

[node name="Programmer" type="Label" parent="ColorRect/VBoxContainer2/VBoxContainer/VBoxContainer3"]
margin_right = 325.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.647059, 0.647059, 1 )
text = "Program Department"
align = 1
valign = 1

[node name="Label3" type="Label" parent="ColorRect/VBoxContainer2/VBoxContainer/VBoxContainer3"]
margin_top = 44.0
margin_right = 325.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 2 )
text = "Felipe Inoue"
align = 1
valign = 1

[node name="ButtonGoBack" type="Button" parent="ColorRect"]
margin_left = 36.1762
margin_top = 30.1468
margin_right = 167.176
margin_bottom = 76.1468
custom_fonts/font = SubResource( 3 )
text = "Go Back"
flat = true

[node name="AudioButtonGoBack" type="AudioStreamPlayer" parent="ColorRect/ButtonGoBack"]
stream = ExtResource( 3 )

[node name="Logo" parent="ColorRect" instance=ExtResource( 4 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/change_scene = SubResource( 4 )

[connection signal="pressed" from="ColorRect/ButtonGoBack" to="." method="_on_ButtonGoBack_pressed"]
[connection signal="finished" from="ColorRect/ButtonGoBack/AudioButtonGoBack" to="." method="_on_ButtonGoBack_finished"]
